the code is organized well